--- a/client/src/style.css
+++ b/client/src/style.css
@@ -874,3 +874,15 @@ body {
     transform: translateX(0);
   }
 }
+
+.pawn-wrapper {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 0;
+  height: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+}
