The Board (Squaring Up)

--- a/client/src/css/layout.css
+++ b/client/src/css/layout.css
@@ -15,6 +15,13 @@
     min-width: 0;
 }
 
+.board-container {
+    display: grid;
+    width: 100vmin;
+    aspect-ratio: 1 / 1;
+    margin: auto;
+}
+
 .sidebar-panel {
     width: 300px;
     display: flex;
