--- a/client/src/css/layout.css
+++ b/client/src/css/layout.css
@@ -16,10 +16,18 @@
 }
 
 .board-container {
-    display: grid;
-    width: 100vmin;
-    aspect-ratio: 1 / 1;
+    aspect-ratio: 1/1;
+    max-height: 95vh;
+    max-width: 95vw;
     margin: auto;
+}
+
+.ludo-grid {
+    display: grid;
+    grid-template-columns: repeat(15, 1fr);
+    grid-template-rows: repeat(15, 1fr);
+    width: 100%;
+    height: 100%;
 }
 
 .sidebar-panel {
