--- a/client/src/css/components.css
+++ b/client/src/css/components.css
@@ -203,6 +203,29 @@
     }
 }
 
+/* Dice shake animation */
+@keyframes shake-dice {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    25% {
+        transform: rotate(15deg);
+    }
+
+    50% {
+        transform: rotate(-15deg);
+    }
+
+    75% {
+        transform: rotate(10deg);
+    }
+
+    100% {
+        transform: rotate(0deg);
+    }
+}
+
 #dice-display {
     width: 60px;
     height: 60px;
@@ -214,6 +237,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.dice-rolling {
+    animation: shake-dice 0.5s ease-in-out;
 }
 
 /* Modern Action Button */
