--- a/client/src/css/board.css
+++ b/client/src/css/board.css
@@ -13,8 +13,8 @@
 #ludo-board {
     aspect-ratio: 1/1;
     background: var(--board-bg);
-    border: 8px solid #333;
-    border-radius: 12px;
+    border: 8px solid var(--board-border);
+    border-radius: var(--border-radius-lg);
     display: grid;
     grid-template-columns: repeat(15, 1fr);
     grid-template-rows: repeat(15, 1fr);
@@ -25,7 +25,7 @@
 }
 
 .cell {
-    border: 0.5px solid #ccc;
+    border: 0.5px solid var(--cell-border);
     position: relative;
     display: flex;
     justify-content: center;
@@ -78,9 +78,9 @@
 .pawn {
     width: 0;
     height: 0;
-    border-left: 15px solid transparent;
-    border-right: 15px solid transparent;
-    border-bottom: 40px solid var(--pawn-color);
+    border-left: var(--pawn-half-width) solid transparent;
+    border-right: var(--pawn-half-width) solid transparent;
+    border-bottom: var(--pawn-height) solid var(--pawn-color);
     background: transparent;
     border-radius: 0;
     box-shadow: none;
@@ -89,7 +89,7 @@
     position: absolute;
     /* Proper centering for cone origin */
     transform-origin: bottom center;
-    margin-left: -15px;
+    margin-left: calc(var(--pawn-half-width) * -1);
     /* Half of width */
     margin-top: -20px;
     filter: drop-shadow(0 3px 2px rgba(0, 0, 0, 0.5));
@@ -98,10 +98,10 @@
 .pawn::after {
     content: '';
     position: absolute;
-    top: 40px;
+    top: var(--pawn-height);
     /* at bottom */
-    left: -15px;
-    width: 30px;
+    left: calc(var(--pawn-half-width) * -1);
+    width: var(--pawn-base-width);
     height: 10px;
     background: rgba(0, 0, 0, 0.3);
     border-radius: 50%;
